Wed Jun 23 23:00:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HtHTTP.h, htdig/HtHTTP.cc: Make a subclass of Transport.

Wed Jun 23 22:08:20 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Configuration.cc (Add): Handle single-quoted values for
	attributes.

Tue Jun 22 23:35:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Transport.h, htdig/Transport.cc: Virtual classes to handle
	transport protocols such as HTTP, FTP, WAIS, gopher, etc.

	* htdig/Makefile.in: Make sure they're compiled (not that there's
	much!)

	* htdig/HtHTTP.h: Add htdig.h to ensure config is defined.
	
Mon Jun 21 14:33:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(readHeader), htdig/HtHTTP.cc(ParseHeader): fix
	handling of modification_time_is_now in readHeader, add similar code
	to ParseHeader.

Sun Jun 20 21:25:15 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
	
	* htdig/Retriever.h: Add hop parameter to got_href
	method. Defaults to 1.

	* htdig/Retriever.cc(got_href): Use it instead of constant 1.
	
	* htdig/HTML.cc (do_tag): Use new hop parameter to keep the same
	hopcount for frame, embed and object tags.

	* htdig/Makefile.in: Make sure HtHTTP.cc is compiled.

	* htdig/HtHTTP.cc (ctor): Add default value for _server to make
	prevent strange segmentation faults.

Fri Jun 18 09:53:30 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.h, htcommon/DocumentRef.cc(Clear, Deserialize):
	add docHeadIsSet field, code for setting and getting it.
	* htcommon/DocumentDB.cc(Add): only put out excerpt record if DocHead
	is really set.
	* htmerge/doc.cc(convertDocs): add missing else after code to delete
	documents with no excerpts.
	(All these changes fix the disappearing excerpts problem in 3.2.)

Wed Jun 16 23:04:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc (UseProxy): Change http_proxy_exclude to an